gd_internal_course_tasks/task_ingress/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
#  clusterIP: None
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8085
